--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,9 @@ jobs:
         uses: actions/checkout@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+      - name: Install dependencies
+        run: |
+          sudo apt update && sudo apt install -y docker-compose curl
       - name: Build all images
         run: |
           docker-compose -f docker/docker-compose.yml build
@@ -32,4 +35,5 @@ jobs:
           docker tag apache:latest apache:${{ github.sha }}
           docker tag phthonapi:latest phthonapi:${{ github.sha }}
       - name: Auto-redeploy
+
         run: echo "Redeploy triggered on push to main"
