--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
       - name: Install dependencies
         run: |
-          sudo apt update && sudo apt install -y docker-compose curl
+          sudo apt update && sudo apt install -y docker-compose curl hadolint
       - name: Build all images
         run: |
           docker-compose -f docker/docker-compose.yml build
@@ -37,3 +37,4 @@ jobs:
       - name: Auto-redeploy
 
         run: echo "Redeploy triggered on push to main"
+
