--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,29 +12,28 @@ jobs:
         uses: docker/setup-buildx-action@v2
       - name: Install dependencies
         run: |
-          sudo apt update && sudo apt install -y docker-compose curl hadolint
+          sudo apt update && sudo apt install -y docker-compose curl
       - name: Build all images
         run: |
-          docker-compose -f docker/docker-compose.yml build
-      - name: Lint Dockerfiles
+          sudo docker-compose -f docker/docker-compose.yml build
+      - name: Linting
         run: |
-          hadolint docker/apache/dockerfile
-          hadolint docker/nginx/dockerfile
-          hadolint docker/phthonapi/dockerfile
+          cd docker
+          sudo docker run --rm -i hadolint/hadolint  < apache/dockerfile
+          sudo docker run --rm -i hadolint/hadolint  < nginx/dockerfile
+          sudo docker run --rm -i hadolint/hadolint  < pythonapi/dockerfile
       - name: Validate Compose config
         run: docker-compose -f docker/docker-compose.yml config
       - name: Test containers
         run: |
-          docker-compose -f docker/docker-compose.yml up -d
+          sudo docker-compose -f docker/docker-compose.yml up -d
           sleep 10
           curl -i http://localhost
           curl -i http://localhost/api/health
       - name: Tag Docker images
         run: |
-          docker tag nginx:latest nginx:${{ github.sha }}
-          docker tag apache:latest apache:${{ github.sha }}
-          docker tag phthonapi:latest phthonapi:${{ github.sha }}
+          sudo docker tag nginx:latest nginx:${{ github.sha }}
+          sudo docker tag apache:latest apache:${{ github.sha }}
+          sudo docker tag phthonapi:latest phthonapi:${{ github.sha }}
       - name: Auto-redeploy
-
         run: echo "Redeploy triggered on push to main"
-
