--- a/docker/nginx/dockerfile
+++ b/docker/nginx/dockerfile
@@ -1,8 +1,9 @@
 # NGINX Reverse Proxy Dockerfile (Advanced)
-FROM alpine:latest
-RUN apk add --no-cache nginx openssl
+FROM alpine:3.22.2
+RUN apk add --no-cache nginx=1.24.0-r0 openssl=3.1.2-r2
 COPY conf/nginx-advanced.conf /etc/nginx/nginx.conf
 COPY conf/cert.pem /etc/nginx/cert.pem
 COPY conf/key.pem /etc/nginx/key.pem
 EXPOSE 80 443
+
 CMD ["/bin/sh", "-c", "nginx -g 'daemon off;' & tail -F /var/log/nginx/access.log /var/log/nginx/error.log"]
